--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,17 +8,12 @@
 }
 
 .App {
-  margin: 0;
+  
+  margin:0;
   font-family: 'Anton', sans-serif;
   padding: 0;
   text-align: center;
   background-color: rgb(48, 38, 53);
-  /* display: flex;
-  flex-direction: column;
-	flex-wrap: nowrap;
-	justify-content: flex-start;
-	align-items: stretch;
-	align-content: stretch; */
   color:#8855ff;
 }
 
@@ -29,6 +24,7 @@
 .header{
   width: 100%;
   margin:0;
+  margin-top: 30px;
 } 
 
 
@@ -38,6 +34,7 @@
   width: 80vw;
   height: 70vh;
   margin: 0 auto;
+  border-radius: 15px;
 }
 
 
@@ -47,19 +44,17 @@
   padding: 0;
   top: -500px;
   left: -500px;
+  border-radius: 15px;
 }
+
 .gallery-container{
 
   display:grid;
   grid-template-columns: repeat(3,1fr);
   grid-auto-rows: 150px;
-
+  height: 50%;
   width: 100%;
   display:flex;
-  /* grid-template-columns: repeat(3,2fr);
-  grid-auto-rows: 100px;
-  
-  grid-gap: 10px;*/
   padding: 60px;
   justify-content: space-around;
   flex-direction: row;
@@ -67,12 +62,11 @@
 }
 
 .gallery-img{
-  width:400px;
-  height:300px;
+  width:500px;
+  height:450px;
   margin-left: 0;
-  margin-top: 100px;
-  margin-bottom: 20px;
-  /* object-fit: cover;*/
+  margin-top: 25px;
+  margin-bottom: 25px;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
@@ -83,7 +77,7 @@
 }
 
 .details-link{
-  color:#8855ff;
+  color:#8855fffd;
   letter-spacing: 4px;
   text-decoration: none;
   margin:10%;
@@ -96,24 +90,230 @@
   letter-spacing: 5px;
   padding: 0.5em 1em;
   margin-left: 1em;
-  background-color: #8855ff;
-  box-shadow: 0 0 5px 0 aliceblue;
+  background-color: #9c74f8d7;
+  box-shadow: 0 0 5px 0 rgba(234, 241, 248, 0.884);
   border: none;
   border-radius: 2px;
   cursor: pointer;
-  color: #e3f2ff;
+  color: #e3f2ffc9;
   transition: all 0.2s ease-in-out;
   position: sticky;
   top: 0;
+  margin-top:20px;
+  margin-bottom:0;
 }
 
+.new-btn{
+  font-family: inherit;
+  font-weight: inherit;
+  letter-spacing: 5px;
+  padding: 0.5em 1em;
+  margin-left: 1em;
+  background-color: #9c74f8d7;
+  box-shadow: 0 0 5px 0 rgba(234, 241, 248, 0.884);
+  border: none;
+  border-radius: 2px;
+  cursor: pointer;
+  color: #e3f2ffc9;
+  transition: all 0.2s ease-in-out;
+  position: sticky;
+  top: 0;
+  margin-top:20px;
+  margin-bottom:65px;
+}
+
+.constellation-btn{
+  font-family: inherit;
+  font-weight: inherit;
+  letter-spacing: 5px;
+  padding: 0.5em 1em;
+  margin-left: 1em;
+  background-color: #9c74f8d7;
+  box-shadow: 0 0 5px 0 rgba(234, 241, 248, 0.884);
+  border: none;
+  border-radius: 2px;
+  cursor: pointer;
+  color: #e3f2ffc9;
+  transition: all 0.2s ease-in-out;
+  position: sticky;
+  top: 0;
+  margin-top: 10px;
+  margin-bottom: 80px;
+}
 
 .container-1{
-color: #8855ff;
+  color: #8855ffb9;
+  letter-spacing: 4px;
+}
+
+/* height:1500px;
+  overflow: hidden;
+  width: 80vw;
+  height: 70vh;
+  margin: 0 auto;
+  border-radius: 15px; */
+
+.detail-container{
+  height: 75%; 
+  padding:0;
+}
+
+.detail-title{
+  font-size: 40px;
+  margin-bottom: 10px;
+  letter-spacing: 4px;
+  text-align: center; 
 }
 
 
-.ui-list{
-  color: red;
+.detail-img{
+  position: relative;
+  overflow: hidden;
+  width: 40vw;
+  height: 60vh;
+  margin: 0 auto;
+  border-radius: 15px;
+}
 
+
+ .detail-explanation{
+  font-size: 20px;
+  width: 80%;  
+  margin: 0 auto;
+  letter-spacing: 4px;
+  text-align: center; 
+} 
+
+
+.detail-tagline{
+  font-size: 20px; 
+  letter-spacing: 4px;
+  margin: 10px;
+
+}
+
+
+.email-container{
+  display: flex;
+  background-color: #f3f2f180;
+  padding: 10px;
+  width:240px;
+  margin: 0 auto;
+  border-radius:5px;
+  margin-bottom: 20px;
+  margin-top:15px;
+  display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	justify-content: center;
+	align-items: center;
+	align-content: stretch;
+}
+
+.email-space{
+  display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	justify-content: center;
+	align-items: center;
+	align-content: stretch;
+  margin-top:5px;
+  margin-bottom: 5px;
+}
+
+.message-space{
+  display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	justify-content: center;
+	align-items: center;
+	align-content: stretch;
+  margin-top:5px;
+  margin-bottom: 5px;
+}
+
+
+.login-container{
+  letter-spacing: 4px;
+  display: flex;
+  background-color: #f3f2f180;
+  padding: 20px;
+  width:300px;
+  margin: 0 auto;
+  border-radius:5px;
+  margin-top: 150px;
+  margin-bottom: 20px;
+  display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	justify-content: center;
+	align-items: center;
+	align-content: stretch;
+}
+.login{
+  height:500vh;
+}
+.username-space{
+  font-size: 25px;
+  display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	justify-content: center;
+	align-items: center;
+	align-content: stretch;
+  margin-top:10px;
+  margin-bottom: 30px;
+}
+.password-space{
+  font-size: 25px;
+  display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	justify-content: center;
+	align-items: center;
+	align-content: stretch;
+  margin-top:5px;
+  margin-bottom: 15px;
+  margin-top: 50px;
+}
+
+.username-space input{
+  margin-top:-30px;
+  
+}
+
+.signup-username-space{
+  font-size: 25px;
+  display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	justify-content: center;
+	align-items: center;
+	align-content: stretch;
+  margin-top:25px;
+  margin-bottom: 30px;
+}
+
+.signup-email-space{
+  font-size: 25px;
+  display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	justify-content: center;
+	align-items: center;
+	align-content: stretch;
+  margin-top:10px;
+  margin-bottom: 30px;
+}
+
+.signup-password-space{
+  font-size: 25px;
+  display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	justify-content: center;
+	align-items: center;
+	align-content: stretch;
+  margin-top:10px;
+  margin-bottom: 30px;
 }
