--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -2,7 +2,7 @@
 nav {
   display: flex;
   padding: 1em;
-  justify-content: space-around;
+  justify-content: space-between;
   flex-wrap: wrap;
   background: #2e0257;
   font-weight: 600;
@@ -19,13 +19,88 @@ nav {
 .authLink {
   color:8855ff;
   letter-spacing: 5px;
-  font-size: 25px;
+  font-size: 35px;
   text-decoration: none;
   transition: color 0.2s ease-in-out;
+  height:100px;
+  margin-left: 50px;
+  margin-bottom: 0;
+  margin-top: 30;
+  padding: 0;
+
 }
 
-.authLink + .authLink {
-  padding: 1em;
+h1{
+  letter-spacing: 5px;
+  font-size: 35px;
+  text-decoration: underline;
+
+
+}
+
+
+.authLink1 {
+  color:8855ff;
+  letter-spacing: 5px;
+  font-size: 35px;
+  text-decoration: none;
+  transition: color 0.2s ease-in-out;
+  height:100px;
+  margin-left: 50px;
+  margin-bottom: 0;
+  margin-top: 20px;
+  padding: 0;
+
+}
+
+.authLink2 {
+  color:8855ff;
+  letter-spacing: 5px;
+  font-size: 35px;
+  text-decoration: none;
+  transition: color 0.2s ease-in-out;
+  height:100px;
+  margin-left: 50px;
+  margin-bottom: 0;
+  margin-top: 30px;
+  padding: 0.5em 1em;
+  margin-left: 1em;
+}
+
+
+
+.authLink3 {
+  color:8855ff;
+  letter-spacing: 5px;
+  font-size: 35px;
+  text-decoration: none;
+  transition: color 0.2s ease-in-out;
+  height:100px;
+  margin-left: 50px;
+  margin-bottom: 0;
+  margin-top: 30px;
+  padding: 0.5em 1em;
+  margin-left: 1em;
+}
+
+
+
+.authLink1 + .authLink2 {
+  padding: 1em ;
+}
+
+
+.authLink1:hover {
+  color: #ffffff;
+}
+
+.authLink2:hover {
+  color: #ffffff;
+}
+
+
+.authLink3:hover {
+  color: #ffffff;
 }
 
 .authLink:hover {
@@ -33,8 +108,7 @@ nav {
 }
 
 .nav-logoutbtn {
-  font-family: inherit;
-  font-weight: inherit;
+  font-size: 20px;
   letter-spacing: 5px;
   padding: 0.5em 1em;
   margin-left: 1em;
@@ -45,7 +119,6 @@ nav {
   cursor: pointer;
   color: #e3f2ff;
   transition: all 0.2s ease-in-out;
-  position: sticky;
   top: 0;
 }
 
